# zpr25z

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md  install_dependencies.sh
src/: Main.cc
src/ai/: AIPlayer.cc  AIPlayer.h  Codec.cc  Codec.h  TrainingManager.cc  TrainingManager.h
src/core/: Card.cc  Card.h  Game.cc  Game.h  GameConfig.cc  GameConfig.h  Player.cc  Player.h  Property.cc  Property.h  Space.h  SpecialProperties.cc  SpecialProperties.h
src/gui/: GUIPlayer.cc  GUIPlayer.h  MainWindow.cc  MainWindow.h
src/trainer/: Main.cc
tests/: CMakeLists.txt
tests/core/: TestGame.cc  TestPlayer.cc  TestProperty.cc  TestSpecialCards.cc
